[package]
name = "trinci-node"
version = "0.2.4-rc1"
authors = ["The Trinci Team <trinci@affidaty.io>"]
edition = "2021"
description = "TRINCI blockchain node"
keywords = ["trinci", "blockchain", "node"]

[dependencies]
trinci-core = { git = "https://github.com/affidaty-blockchain/trinci-core" }
log = { version = "0.4.14", features = ["release_max_level_info"] }
clap = "2.33.3"
toml = "0.5.8"
simplelog = "0.11.1"
hex = "0.4.3"
serde-value = { git = "https://github.com/affidaty-blockchain/serde-value", branch = "helper_macro" }
rand = "0.8.4"
tempfile = "3.2.0"
# Serialization 
serde = { version = "1.0.126", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# POST
isahc = { version = "1.6.0", optional = true }
# pretty print on file
ascii_table = { version = "3.0.2", optional = true }

[features]
default = ["monitor"]
tpm2 = ["trinci-core/tpm2"]
monitor = ["serde", "serde_json", "isahc", "ascii_table"]
